Actualizacion de tests para TEST DRIVEN DEVELOPMENT (Implementacion parte roja) y el pom para las verificaciones